Fix disconnectContainer on mobile

--- a/src/components/WalletContent/styles.module.scss
+++ b/src/components/WalletContent/styles.module.scss
@@ -55,6 +55,10 @@
   justify-content: center;
   max-width: 150px;
   width: 100%;
+
+  @media (max-width: 960px) {
+    max-width: unset;
+  }
 }
 .disconnectButton {
   height: 40px;
